<resources>
    <string name="app_name">Shoe Store</string>
    <string name="title_shoedacity">Shoedacity</string>
    <string name="title_login">Login</string>
    <string name="title_shoe_store">Your Shoe  Store</string>
    <string name="hint_email">email@address.com</string>
    <string name="label_email">Email:</string>
    <string name="label_password">Password:</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="hint_password">Your password</string>
    <string name="error_enter_login_details">Enter a Username and password</string>
    <string name="menu_item_logout">Logout</string>
    <string name="welcome_heading">Welcome to Shoedacity</string>
    <string name="welcome_message">This app has been created as part of the Android Kotlin Developer Nanodegree at Udacity. \nIt is meant to demonstrate skills learned so far in this course. This includes Layouts, Navigation, DataBinding, ViewModels and LiveData.</string>
    <string name="button_instructions">Instructions</string>
    <string name="instructions_heading">Instructions</string>
    <string name="button_continue">Continue</string>
    <string name="instructions">The following page is the shoe listing page. This page shows a list of shoes that you have entered. On first arriving at this page there will be no shoes listed. Use the + button for adding a new shoe. This will take you to a form used for adding a new shoe to the list. Note that saved shoes only last as long as the app is running.</string>
    <string name="shoes_list_heading">Shoes List</string>
    <string name="item_shoe_name">Shoe name: %s</string>
    <string name="item_shoe_size">Shoe size: %s</string>
    <string name="item_shoe_make">Company: %s</string>
    <string name="item_shoe_description">Description: %s</string>
    <string name="add_shoe_button">Add Shoe</string>
    <string name="title_add_shoe">Add New Shoe</string>
    <string name="label_shoe_name">Name:</string>
    <string name="label_company">Company:</string>
    <string name="label_shoe_size">Shoe Size:</string>
    <string name="label_description">Description:</string>
    <string name="button_save">Save Shoe</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_enter_shoe_details">Enter all shoe details</string>
    <string name="hint_shoe_name">Enter the shoe name</string>
    <string name="hint_company_name">Enter the company</string>
    <string name="hint_shoe_size">Enter the shoe size</string>
    <string name="hint_shoe_description">Enter a description</string>
</resources>
