<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
<!-- I used LinearLayour here as it was simply a single column of horizontally centered elements.
No other layout was required-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_margin"
        android:textAlignment="center">

        <TextView
            android:id="@+id/tv_welcome_heading"
            style="@style/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_heading" />

        <TextView
            android:id="@+id/tv_welcome_sub_heading"
            style="@style/subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_shoe_store"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:padding="@dimen/small_padding"
            android:text="@string/welcome_message" />

        <Button
            android:id="@+id/button_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/button_instructions"
            android:textAlignment="center" />
    </LinearLayout>
</layout>