<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_site_heading"
            style="@style/heading"
            android:text="@string/title_shoedacity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_site_heading"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_label_email"
            style="@style/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        <EditText
            android:id="@+id/et_email_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/small_padding"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_email" />

        <TextView
            android:id="@+id/tv_label_password"
            style="@style/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_address" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="@dimen/small_padding"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_password" />

        <Button
            android:id="@+id/button_login"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/button_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/button_register"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>